--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "main": "esmToCjsBridge.js",
   "module": "./bg-dom.js",
   "version": "2.2.0",
-  "description": "Atom plugin UI Component library using REDOM and compliant with the Atom style guide",
+  "description": "UI Component library similar to REDOM and compliant with the Atom style guide",
   "keywords": [
     "atom",
     "redom",
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/junga-com/bg-dom#readme",
   "dependencies": {
+    "esm": "^3.2.25",
     "redom": "^3.24.2"
   }
 }
