cleaning up multiple packages for publishing * passed {mount,unmount} exports through from redom so that packages that use us dont need to be dependent on redom pkg also

--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "redom",
     "ui",
     "components",
+    "bgcomponents",
+    "dom",
+    "framework",
+    "library",
     "style-guide",
     "bg"
   ],
