Finished the initial GlobalServices API * provides 2 new patterns 1) safely create global variables, and 2) track package loads to create bg.pkgInfo to analyze versions of the same package

--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
   "homepage": "https://github.com/junga-com/bg-dom#readme",
   "dependencies": {
     "esm": "^3.2.25",
+    "json5": "^2.1.3",
+    "node-version-compare": "^1.0.3",
     "redom": "^3.24.2"
   }
 }
