Working on bg-desktop experiment trying to get native (without esm pkg) ES parsing to work * componentParams: recognize names with '[]' * makeTagIDClasses,ComponentGetName: changed terseFlag to options * componentParams: refined callback/funciton processing * TabBar,Tabs: added new classes moved from the bg-desktop experiment * Components: added some missing wrappers to componentCore functions. * ComponentToBG: added support for new forceFlag value 'create' * ComponentGetName,ComponentGetMountedName: refined so that they work for both the mount use-case and mountedName use-case * ComponentGet: added. mountedName is now like an absolute path. The root will be the fist element parent that is getable by #ID or the root html element. * ComponentMount: earlier error detection of conflicting child names * icons: added support for a virtual <icon> tag that ComponentMakeDOMNode intercepts to replace with an icon system <svg>. * icons: started notion of an icon resource registry. at first only uses octicon's map of icon name->svg * ComponentDestroyDOMNode: refined the relation being destroying and unmounting. unmounting is a subset of destrying now. * docs: added Cascade diagram -- WIP * ES'efied package.json

--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "bg-dom",
   "main": "esmToCjsBridge.js",
   "module": "./bg-dom.mjs",
+  "exports": {
+      ".": "./bg-dom.mjs"
+  },
+  "type": "module",
   "version": "2.4.4",
   "description": "UI Component library similar to REDOM and compliant with the Atom style guide",
   "keywords": [
